--- a/src/index.html
+++ b/src/index.html
@@ -11,3 +11,5 @@
   <app-root></app-root>
 </body>
 </html>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBF_eDWTQpdzh-myCYmWOiafHnNRsuPBeY&libraries=places"></script>
